gccida/g1/clear_storage
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/clear_storage/src/expr.c:3042:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v8; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/clear_storage/src/expr.c:3045:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v11; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/clear_storage/src/expr.c:3046:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *tree; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/clear_storage/src/expr.c:3047:5: error: expected ';' after expression
tree v13; // rbx 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/clear_storage/src/expr.c:3047:6: error: use of undeclared identifier 'v13'
tree v13; // rbx 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/clear_storage/src/expr.c:3048:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v14; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/clear_storage/src/expr.c:3049:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v15; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/clear_storage/src/expr.c:3051:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v17; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/clear_storage/src/expr.c:3052:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v18; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/clear_storage/src/expr.c:3053:5: error: expected ';' after expression
tree v19; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/clear_storage/src/expr.c:3053:6: error: use of undeclared identifier 'v19'
tree v19; // rax 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/clear_storage/src/expr.c:3054:5: error: expected ';' after expression
tree v20; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/clear_storage/src/expr.c:3054:6: error: use of undeclared identifier 'v20'
tree v20; // rax 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/clear_storage/src/expr.c:3060:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v27; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/clear_storage/src/expr.c:3061:1: error: must use 'enum' tag to refer to type 'insn_code'
insn_code v28; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/clear_storage/src/expr.c:3066:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v33; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/clear_storage/src/expr.c:3067:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v34; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/clear_storage/src/expr.c:3068:5: error: expected ';' after expression
tree v35; // rdi 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/clear_storage/src/expr.c:3068:6: error: use of undeclared identifier 'v35'
tree v35; // rdi 
     ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/clear_storage/src/obj/expr.o] Error 1
